// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons Close icon renders as expected 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
}

<svg
    class="emotion-0"
    viewBox="0 0 14 14"
  >
    <g
      fill="none"
      fill-rule="evenodd"
      transform="translate(-5 -5)"
    >
      <polygon
        fill="#333"
        points="19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Icons Menu icon renders as expected 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
}

<svg
    class="emotion-0"
    viewBox="0 0 24 24"
  >
    <g
      fill="none"
      fill-rule="evenodd"
    >
      <path
        d="M3,18 L21,18 L21,16 L3,16 L3,18 L3,18 Z M3,13 L21,13 L21,11 L3,11 L3,13 L3,13 Z M3,6 L3,8 L21,8 L21,6 L3,6 L3,6 Z"
        fill="#333"
      />
    </g>
  </svg>
</DocumentFragment>
`;
